# python-in-science

./: .gitignore  pyproject.toml
data/: macbeth.txt  makbet.txt
python_in_science/: ex01.py  ex01_histogram.py  ex02_ising.py  ex03_decorator.py  ex04_numba.py  ex04_numba_results.md  ex05_webscraping.py  ex05_webscraping_output.json  ex06_selenium.py  ex07_de.py  ex08_sympy.py  ex09_bokeh.html  ex09_bokeh.py
